changed html element names

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a
                             href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN5cFgLcg4H7ZY5gAX6Tx8y1nU7p_uUj5H8zxz74ZGXvdiSZ7WLMsAw22jG4Jt4cU98x8&usqp=CAU">
 
-                            <img src="https://miro.medium.com/max/8576/1*EE4IrlniNAhubIUrFqV3FQ.jpeg" alt="project1"
+                            <img src="https://miro.medium.com/max/8576/1*EE4IrlniNAhubIUrFqV3FQ.jpeg" alt="Coding-Background"
                                 height="575" width="auto">
                         </a>
 
@@ -85,7 +85,7 @@
                             href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN5cFgLcg4H7ZY5gAX6Tx8y1nU7p_uUj5H8zxz74ZGXvdiSZ7WLMsAw22jG4Jt4cU98x8&usqp=CAU">
 
                             <img src="https://d2slcw3kip6qmk.cloudfront.net/marketing/blog/2017Q2/project-planning-header@2x.png"
-                                alt="project1" height="auto" width="130%">
+                                alt="projectImage" height="auto" width="130%">
                         </a>
 
                         <a
@@ -99,7 +99,7 @@
                             href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN5cFgLcg4H7ZY5gAX6Tx8y1nU7p_uUj5H8zxz74ZGXvdiSZ7WLMsAw22jG4Jt4cU98x8&usqp=CAU">
 
                             <img src="https://d2slcw3kip6qmk.cloudfront.net/marketing/blog/2017Q2/project-planning-header@2x.png"
-                                alt="project1" height="auto" width="130%">
+                                alt="projectImage" height="auto" width="130%">
                         </a>
 
                         <a
@@ -113,7 +113,7 @@
                             href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN5cFgLcg4H7ZY5gAX6Tx8y1nU7p_uUj5H8zxz74ZGXvdiSZ7WLMsAw22jG4Jt4cU98x8&usqp=CAU">
 
                             <img src="https://d2slcw3kip6qmk.cloudfront.net/marketing/blog/2017Q2/project-planning-header@2x.png"
-                                alt="project1" height="auto" width="130%">
+                                alt="projectImage" height="auto" width="130%">
                         </a>
 
                         <a
@@ -127,7 +127,7 @@
                             href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN5cFgLcg4H7ZY5gAX6Tx8y1nU7p_uUj5H8zxz74ZGXvdiSZ7WLMsAw22jG4Jt4cU98x8&usqp=CAU">
 
                             <img src="https://d2slcw3kip6qmk.cloudfront.net/marketing/blog/2017Q2/project-planning-header@2x.png"
-                                alt="project1" height="auto" width=130%%">
+                                alt="projectImage" height="auto" width=130%%">
                         </a>
 
                         <a
