added picture of my self and added curved borders

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abners Portfolio</title>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -30,7 +30,10 @@
         <div id="infoContainer">
 
             <div id="aboutMe">
-                <h3 id="abmHeader">A Little About Me</h3>
+                <div id="abmHeader">
+                <h3>A Little About Me</h3>
+                <img id="picture" src="assets/images/picture.jpg" alt="Picture of Me" height="475px" width="auto">
+                </div>
 
                 <div id="aboutMeText">
                     <p>Hello, so you’ve stumbled across my page, welcome. My name is Abner, I’m a web developer in
@@ -66,14 +69,14 @@
 
                     <div id="project1">
                         <a
-                            href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN5cFgLcg4H7ZY5gAX6Tx8y1nU7p_uUj5H8zxz74ZGXvdiSZ7WLMsAw22jG4Jt4cU98x8&usqp=CAU">
+                            href="https://abnertor.github.io/WantADog/">
 
                             <img src="https://miro.medium.com/max/8576/1*EE4IrlniNAhubIUrFqV3FQ.jpeg" alt="Coding-Background"
                                 height="575" width="auto">
                         </a>
 
                         <a
-                            href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN5cFgLcg4H7ZY5gAX6Tx8y1nU7p_uUj5H8zxz74ZGXvdiSZ7WLMsAw22jG4Jt4cU98x8&usqp=CAU">
+                            href="https://abnertor.github.io/WantADog/">
                             <p id="p1Para">Project 1</p>
                         </a>
                     </div>
