added final touches

--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
 
                     <div id="emailLink"><a href="mailto: abnertoribio@live.com">Email me</a></div>
                     <div id="phoneNumber">Cell-phone: 123-456-7890</div>
-                    <div id="otherContact"><a
-                            href="https://www.linkedin.com/in/abner-toribio-vazquez-726241127/">linkedin</a></div>
+                    <div id="otherContact">
+                        <a href="https://www.linkedin.com/in/abner-toribio-vazquez-726241127/">linkedin</a>
+                    </div>
                 </ul>
             </div>
 
