ignore this push

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <div id="projects">
+            <div id="projects" class="projects">
 
                 <div id="projectHeader">
                     <h3>Projects</h3>
